@@ -7,12 +7,13 @@ Some setup you must do manually if you haven't yet:
 
     config.action_mailer.default_url_options = { :host => 'localhost:3000' }
 
-It's a Rails required configuration.
-In production it must be the actual host your application is deployed to.
+It's a Rails required configuration. In production it must be the actual host your application is deployed to.
 
-2. Setup default sender for mails.In config/environment.rb:
+2. Setup default sender for mails. In config/environment.rb:
 
-    Notifier.sender = "test@example.com"
+    DeviseMailer.sender = "test@example.com"
+
+You can also configure this value by running script/generate devise_install and setting config.mailer_sender,
 
 3. Ensure you have defined root_url to *something* in your config/routes.rb:
 
